--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,14 @@
     {
       "path": "./tsconfig.node.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    // "target": "es5",
+    // "module": "commonjs",
+    // "strict": true,
+    // // "noImplicitAny": false,
+    // "esModuleInterop": true,
+    // "skipLibCheck": true,
+    // "forceConsistentCasingInFileNames": true
+  }
 }
