--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     // "target": "es5",
     // "module": "commonjs",
     // "strict": true,
-    // // "noImplicitAny": false,
+    // "noImplicitAny": false,
     // "esModuleInterop": true,
     // "skipLibCheck": true,
     // "forceConsistentCasingInFileNames": true
